--- a/Breakout Game/index.html
+++ b/Breakout Game/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Bounce Ball Game </title>
+    <title>Bounce Ball Game Dev.Tahir</title>
 </head>
 
 <body>
