--- a/Spin Wheel App/index.html
+++ b/Spin Wheel App/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
-    <title>Spin Wheel App</title>
+    <title>Spin Wheel App Dev.Tahir</title>
 </head>
 
 <body>
